# llm_test

./: .dockerignore  .env.example  Dockerfile  README.md  config.example.json  config.example.yaml  docker-compose.yml  llm_compare.py  models.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
llm_compare/: __init__.py  analytics.py  api_client.py  cli.py  config.py  cost_tracker.py  display.py  export.py  types.py  validators.py
tests/: test_analytics.py  test_api_client.py  test_config.py  test_cost_tracker.py  test_export.py  test_llm_compare.py  test_validate_prompt.py  test_validators.py
